Refactor mypy configuration to use overrides for ignoring missing imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,11 +131,6 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
 
-[tool.mypy-crewai]
-ignore_missing_imports = true
-
-[tool.mypy-crewai.project]
-ignore_missing_imports = true
-
-[tool.mypy-crewai.tools]
+[[tool.mypy.overrides]]
+module = ["crewai.*"]
 ignore_missing_imports = true
