--- a/src/coding_crew_python/config/tasks.yaml
+++ b/src/coding_crew_python/config/tasks.yaml
@@ -1,17 +1,34 @@
-research_task:
+code_quality_task:
   description: >
-    Conduct a thorough research about {topic}
-    Make sure you find any interesting and relevant information given
-    the current year is {current_year}.
+    Use the Ruff tool to check for and fix any identified issues in the codebase.
   expected_output: >
-    A list with 10 bullet points of the most relevant information about {topic}
-  agent: researcher
+    A report detailing the issues found and the fixes applied.
+  agent: code_quality_specialist
 
-reporting_task:
+type_checking_task:
   description: >
-    Review the context you got and expand each topic into a full section for a report.
-    Make sure the report is detailed and contains any and all relevant information.
+    Use the MyPy tool to find and fix any type hint issues in the codebase.
   expected_output: >
-    A fully fledged report with the main topics, each with a full section of information.
-    Formatted as markdown without '```'
-  agent: reporting_analyst
+    A report detailing the type hint issues found and the fixes applied.
+  agent: code_type_checker
+
+unit_test_analysis_task:
+  description: >
+    Run unit tests using pytest, analyze the results, and identify areas where code coverage can be improved.
+  expected_output: >
+    A report detailing the test results and recommendations for improving code coverage.
+  agent: code_tester
+
+unit_test_writing_task:
+  description: >
+    Write unit tests to improve coverage and overall code robustness.
+  expected_output: >
+    A set of new unit tests that improve code coverage and robustness.
+  agent: code_tester
+
+documentation_sync_task:
+  description: >
+    Analyze the documentation and the codebase to ensure they are kept in sync using Sphinx.
+  expected_output: >
+    A report detailing any discrepancies between the documentation and the codebase, and the steps taken to resolve them.
+  agent: code_documenter
